--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.berries {
+  display: flex;
+  justify-content: center;
+  gap: 56px;
+}
+
+.info  {
+  max-width: 200px;
+}
+
+img {
+  padding-bottom: 10px;
+
 }
 
 /* do not edit this footer */
